lib/src/bindings/gifsicle_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset(
  'package:gifsicle_flutter/src/bindings/gifsicle_bindings_generated.dart',
)
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Uint32 Function()>()
external int gs_bridge_abi_version();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> gs_gifsicle_version();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> gs_capabilities_json();

@ffi.Native<
  ffi.Pointer<gs_execution_result> Function(
    ffi.Int32,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<gs_execution_result> gs_execute(
  int argc,
  ffi.Pointer<ffi.Pointer<ffi.Char>> argv,
  ffi.Pointer<ffi.Uint8> stdin_data,
  int stdin_length,
  ffi.Pointer<ffi.Char> working_directory,
);

@ffi.Native<
  ffi.Pointer<gs_result> Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<gs_options>,
  )
>()
external ffi.Pointer<gs_result> gs_transform(
  ffi.Pointer<ffi.Uint8> input_data,
  int input_length,
  ffi.Pointer<gs_options> options,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<gs_result>)>()
external void gs_result_free(ffi.Pointer<gs_result> result);

@ffi.Native<ffi.Void Function(ffi.Pointer<gs_execution_result>)>()
external void gs_execution_result_free(ffi.Pointer<gs_execution_result> result);

@ffi.Native<
  ffi.Pointer<gs_execution_result> Function(
    ffi.Int32,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<gs_execution_result> gs_execute_isolated(
  int argc,
  ffi.Pointer<ffi.Pointer<ffi.Char>> argv,
  ffi.Pointer<ffi.Uint8> data,
  int length,
  ffi.Pointer<ffi.Char> directory,
);

@ffi.Native<
  ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int32)
>()
external int gs_publish_file(
  ffi.Pointer<ffi.Char> source,
  ffi.Pointer<ffi.Char> target,
  int overwrite,
);

final class gs_options extends ffi.Struct {
  @ffi.Uint32()
  external int abi_version;

  @ffi.Uint32()
  external int struct_size;

  @ffi.Int32()
  external int optimization_level;

  @ffi.Int32()
  external int lossy;

  @ffi.Int32()
  external int colors;

  @ffi.Int32()
  external int gamma_mode;

  @ffi.Double()
  external double gamma_value;

  @ffi.Int32()
  external int resize_mode;

  @ffi.Int32()
  external int resize_width;

  @ffi.Int32()
  external int resize_height;

  @ffi.Double()
  external double scale_x;

  @ffi.Double()
  external double scale_y;

  @ffi.Int32()
  external int crop_enabled;

  @ffi.Int32()
  external int crop_x;

  @ffi.Int32()
  external int crop_y;

  @ffi.Int32()
  external int crop_width;

  @ffi.Int32()
  external int crop_height;

  @ffi.Int32()
  external int interlace_mode;

  @ffi.Int32()
  external int careful;

  @ffi.Int32()
  external int remove_comments;
}

final class gs_result extends ffi.Struct {
  @ffi.Int32()
  external int status;

  external ffi.Pointer<ffi.Uint8> output_data;

  @ffi.Size()
  external int output_length;

  external ffi.Pointer<ffi.Char> error_message;

  @ffi.Size()
  external int error_message_length;

  external ffi.Pointer<ffi.Char> warnings;

  @ffi.Size()
  external int warnings_length;
}

final class gs_execution_result extends ffi.Struct {
  @ffi.Int32()
  external int bridge_status;

  @ffi.Int32()
  external int exit_code;

  external ffi.Pointer<ffi.Uint8> stdout_data;

  @ffi.Size()
  external int stdout_length;

  external ffi.Pointer<ffi.Char> stderr_data;

  @ffi.Size()
  external int stderr_length;
}

const int GS_BRIDGE_ABI_VERSION = 1;
